<resources>
    <string name="app_name" translatable="false">HiMe</string>
    <string name="fb_keyhashes" translatable="false">Bmce+9aHdOoVtE7fS3B07tfj7Bc=</string>
    <string name="facebook_app_id" translatable="false">977958385975425</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb977958385975425</string>
    <string name="admob_id" translatable="false">ca-app-pub-1951801777359867~6681021555</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-1951801777359867/9564111868</string>
    <string name="admob_dummy_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="showcase_main" translatable="false">showcase_main</string>
    <string name="error_googleSignIn">Google Sign In Failed!</string>
    <string name="error_authFailed">Authentication Failed!</string>
    <string name="error_fbAuthFailed">Facebook Login Failed!</string>
    <string name="error_empty_email">Email field cannot be empty.</string>
    <string name="error_incorrect_email_form">Please enter correct email form. Eg: example@email.com</string>
    <string name="error_empty_pass">Password field cannot be empty.</string>
    <string name="error_pass_min_length">Minimum password length should be 6.</string>
    <string name="error_pass_max_length">Password cannot exceed 18 characters.</string>
    <string name="error_image_upload">Image Upload Failed</string>
    <string name="error_empty_name">Please fill the Name field.</string>
    <string name="error_empty_field">This field cannot be empty!</string>
    <string name="error_video_upload">Error occurred while uploading video</string>
    <string name="error_no_data_found">No record found!</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="prompt_uploadingVideo">Uploading Contents</string>
    <string name="prompt_upladingVideo_message">Please wait while your content uploads…</string>
    <string name="gdpr">Thank you for choosing to be part of our community at HiMe (“Company”, “we”, “us”, or “our”). We are committed to protecting your personal information and your right to privacy. If you have any questions or concerns about our notice, or our practices with regards to your personal information, please contact us at himehuawei@gmail.com.
When you visit our mobile application, and use our services, you trust us with your personal information. We take your privacy very seriously. In this privacy notice, we seek to explain to you in the clearest way possible what information we collect, how we use it and what rights you have in relation to it. We hope you take some time to read through it carefully, as it is important. If there are any terms in this privacy notice that you do not agree with, please discontinue use of our Apps and our services.
This privacy notice applies to all information collected through our mobile application, ("Apps"), and/or any related services, sales, marketing or events (we refer to them collectively in this privacy notice as the "Services").
Please read this privacy notice carefully as it will help you make informed decisions about sharing your personal information with us.
</string>
    <string name="our_permissions">Permissions Required:\n■  Access approximate location (network based) only in the foreground.\n
        ■  Access precise location only in the foreground.\n
        ■  Modify or delete the contents of your shared storage.\n
        ■  Read the contents of your shared storage.\n
        ■  Record audio.\n
        ■  Take Pictures and videos.\n
    </string>
    <string name="gdpr_consent">I hereby consent that HiMe can use and process my data.</string>
    <string name="gdpr_one_title">1. WHAT INFORMATION DO WE COLLECT?</string>
    <string name="gdpr_one">
Information automatically collected
In Short:   Some information — such as IP address and/or browser and device characteristics — is collected automatically when you visit our Apps.
We automatically collect certain information when you visit, use or navigate the Apps. This information does not reveal your specific identity (like your name or contact information) but may include device and usage information, such as your IP address, browser and device characteristics, operating system, language preferences, referring URLs, device name, country, location, information about how and when you use our Apps and other technical information. This information is primarily needed to maintain the security and operation of our Apps, and for our internal analytics and reporting purposes.
Like many businesses, we also collect information through cookies and similar technologies.
Information collected through our Apps
In Short:   We may collect information regarding your geo-location, mobile device, push notifications, when you use our apps.
If you use our Apps, we may also collect the following information:
Geo-Location Information. We may request access or permission to and track location-based information from your mobile device, either continuously or while you are using our mobile application, to provide location-based services. If you wish to change our access or permissions, you may do so in your device\'s settings.
Mobile Device Data. We may automatically collect device information (such as your mobile device ID, model and manufacturer), operating system, version information and IP address.
Push Notifications. We may request to send you push notifications regarding your account or the mobile application. If you wish to opt-out from receiving these types of communications, you may turn them off in your device\'s settings.
Information collected from other sources
In Short:   We may collect limited data from public databases, marketing partners, social media platforms, and other outside sources.
We may obtain information about your from other sources, such as public databases, joint marketing partners, social media platforms (such as Facebook), as well as from other third parties. Examples of the information we receive from other sources include: social media profile information (your name, gender, birthday, email, current city, state and country, user identification numbers for your contacts, profile picture URL, and any other information that you choose to make public); marketing leads and search results and links, including paid listings (such as sponsored links). We will inform you about the source of information and the type of information and the type of information we have collected about you within a reasonable period after obtaining the personal data, but at the latest within one month.
    </string>
    <string name="gdpr_two_title">2. HOW DO WE USE YOUR INFORMATION?</string>
    <string name="gdpr_two">In Short:  We process your information for purposes based on legitimate business interests, the fulfillment of our contract with you, compliance with our legal obligations, and/or your consent.
We use personal information collected via our Apps for a variety of business purposes described below. We process your personal information for these purposes in reliance on our legitimate business interests, in order to enter into or perform a contract with you, with your consent, and/or for compliance with our legal obligations. We indicate the specific processing grounds we rely on next to each purpose listed below.
We use the information we collect or receive:
To facilitate account creation and logon process. If you choose to link your account with us to a third party account (such as your Google or Facebook account), we use the information you allowed us to collect from those third parties to facilitate account creation and logon process for the performance of the contract. See the section below headed "HOW DO WE HANDLE YOUR SOCIAL LOGINS" for further information.
Deliver targeted advertising to you. We may use your information to develop and display content and advertising (and work with third parties who do so) tailored to your interests and/or location and to measure its effectiveness.
To enable user-to-user communications. We may use your information in order to enable user-to-user communications with each user\'s consent.
To manage user accounts. We may use your information for the purposes of managing our account and keeping it in working order.
    </string>
    <string name="gdpr_three_title">3. WILL YOUR INFORMATION BE SHARED WITH ANYONE?</string>
    <string name="gdpr_title">PRIVACY NOTICE</string>
    <string name="gdpr_date">Last updated March 10, 2020</string>
    <string name="zero" translatable="false">0</string>
    <string name="dummyText" translatable="false">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="action_continue">Continue</string>
    <string name="nav_galley">Gallery</string>
    <string name="image">Image</string>
    <string name="nav_home">Home</string>
    <string name="himeUser">HiMe User</string>
    <string name="lovely">Lovely</string>
    <string name="timestamp">00:00</string>
    <string name="livecamera">Take Photo</string>
    <string name="nav_travel">Travel</string>
    <string name="nav_events">Events</string>
    <string name="txt_hash">#text</string>
    <string name="live_stream">Live Stream</string>
    <string name="pick_photo">Pick Photo</string>
    <string name="live_capture_video">Capture Video</string>
    <string name="followers">Followers</string>
    <string name="views">views</string>
    <string name="post">post</string>
    <string name="search">Search</string>
    <string name="search_hastags">Hashtags</string>
    <string name="search_accounts">Accounts</string>
    <string name="search_places">Places</string>
    <string name="detect_language">detect language</string>
    <string name="en" translatable="false">en</string>
</resources>