<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:menuCategory="system"
        android:title="@string/nav_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/icons_location"
        android:menuCategory="system"
        android:title="@string/nav_travel"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_shutter"
        android:menuCategory="system"
        android:title="@string/live_stream"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/icons_party"
        android:menuCategory="system"
        android:title="@string/nav_events"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_video"
        android:icon="@drawable/ic_gallery"
        android:menuCategory="system"
        android:title="@string/nav_galley"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:menuCategory="system"
        android:title="@string/search"
        app:showAsAction="always"/>
</menu>