<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/darkerBackground"
    android:orientation="vertical"
    android:padding="10dp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_post_lovely"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/single_bottom_text"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="0dp"
        android:background="@color/transparent"
        android:visibility="gone"
        app:lottie_autoPlay="false"
        app:lottie_rawRes="@raw/downwards_lovely_lottie" />

    <LinearLayout
        android:id="@+id/single_bottom_text_sender_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/single_bottom_text_sender_circle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/background_elipse_red"
            android:padding="3dp"
            android:src="@drawable/ic_account_circle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/single_bottom_text_sender_name"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:fontFamily="serif"
                android:text="@string/himeUser"
                android:textColor="?attr/almondBorder"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/single_bottom_text_get_time_ago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/timestamp"
                android:textColor="?attr/textColour"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/single_bottom_text"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/single_bottom_text_sender_layout"
        android:layout_marginStart="128dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alegreya_sans_medium"
        android:text="@string/dummyText"
        android:textColor="?attr/tintColour" />

    <LinearLayout
        android:id="@+id/hybrid_post_change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/single_bottom_text"
        android:layout_marginStart="128dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hybrid_detected_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/detect_language"
            android:textColor="?attr/almondBorder" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_arrow_forward"
            android:textColor="?attr/almondBorder"
            app:tint="?attr/almondBorder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/en"
            android:textColor="?attr/almondBorder" />

        <TextView
            android:id="@+id/single_bottom_lovely"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/lovely"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="end"
            android:text="@string/zero"
            android:textColor="@color/colorRightBubble"
            app:drawableEndCompat="@drawable/ic_lovelyicon"
            app:drawableTint="?attr/almondPurple" />

    </LinearLayout>

    <TextView
        android:id="@+id/post_translated_txt"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hybrid_post_change_language"
        android:layout_marginStart="128dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alegreya_sans_medium"
        android:textColor="?attr/tintColour"
        android:visibility="visible"
        tools:visibility="invisible" />

    <LinearLayout
        android:id="@+id/reply_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/single_bottom_text"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">


    </LinearLayout>

</RelativeLayout>