<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/freyaPrimary">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/gdpr_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        app:cardBackgroundColor="?attr/foregroundColour"
        app:cardCornerRadius="15dp"
        app:cardElevation="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/card_title"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/gdpr_title"
                android:textColor="?attr/tintColour"
                android:textStyle="bold" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/gdpr_date"
                android:textColor="?attr/textColour"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorLight" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.85">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.codesgood.views.JustifiedTextView
                            android:id="@+id/tv_justified_paragraph"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/gdpr"
                            android:textColor="?attr/textColour"
                            android:textSize="12sp" />

                        <com.codesgood.views.JustifiedTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/our_permissions"
                            android:textColor="?attr/textColour"
                            android:textSize="12sp" />

                        <include
                            android:id="@+id/gdpr_table_layout"
                            layout="@layout/gdpr_table" />

                    </LinearLayout>

                </ScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".15"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <CheckBox
                        android:id="@+id/privacy_checkbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:buttonTint="?attr/tintColour"
                        android:text="@string/gdpr_consent"
                        android:textColor="?attr/textColour"
                        tools:ignore="NestedWeights" />

                    <Button
                        android:id="@+id/privacy_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".1"
                        android:background="@drawable/ic_remember"
                        android:clickable="false"
                        android:foreground="?android:selectableItemBackground"
                        android:text="@string/action_continue"
                        android:textColor="@color/colorPureWhite"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>