<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/darkerBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleTag"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_circletag"
            app:civ_border_color="?attr/almondBorder"
            app:civ_border_width="3dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:id="@+id/tag_name"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/txt_hash"
                android:textColor="?attr/almondBorder" />

            <TextView
                android:id="@+id/tag_total_post"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tag_name"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/alegreya_sans_medium"
                android:text="@string/zero"
                android:textColor="?attr/textColour" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tag_name"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/tag_total_post"
                android:fontFamily="@font/alegreya_sans_medium"
                android:text="@string/post"
                android:textColor="?attr/textColour" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>